 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.11rc1

........S. [ZBX-4511] removed the "user_history" table from the list of synchronized tables between nodes (Sasha)
A.F....... [ZBX-4499] fixed upper case error in some browsers while adding macro (sanja)
........S. [ZBX-4526] fixed processing of string trigger functions if the data contains CR character (Sasha)
.......P.. [ZBX-4073] removed unused TrendCacheSize and CacheUpdateFrequency options from proxy (Sasha)
..F....... [ZBX-4506] removed unnecessary new line symbol stripping from HTML attributes (pavels)
.D........ [ZBX-4404] fixed incorrect max value for the MaxHousekeeperDelete option in the default zabbix_server.conf file (Sasha)
A......... [ZBX-4337] fixed possible typo in class.cusermacro.php (sanja)
....I..... [ZBX-4461] changed binary path from bin to sbin in FreeBSD initscripts (Richlv)
..F....... [ZBX-4491] updated Japanese translation; thanks to Kodai Terashima (Richlv)
..F....... [ZBX-4169] fixed filter reset after timeline change in Monitoring->latest data->History of log item (Slava)
..F....... [ZBX-3219] Translating script error to human language (Slava)
..F....... [ZBX-4457] updated French translation; thanks to Joseph Bueno (Richlv)
..F....... [ZBX-3909] fixed link to null on menu and non-hiding menu in maps (Slava)
...G...... [ZBX-4421] added individual CPU statistics on FreeBSD (Andris)
........S. [ZBX-4466] fixed inserting UNKNOWN events with incorrect 'clock' values (Sasha)
........S. [ZBX-2802] fixed handling of NodeNoHistory and NodeNoEvents parameters (Sasha)
...G...PS. [ZBX-4394] fixed handling of log rotation failure (Andris)